--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8887
+
+github.client.id=e6dedd08826359276765
+github.client.secret=01da5f1ddbe49015d577e17bec2c94fb7a8683e0
+github.redirect.uri=http://localhost:8887/callback
