log in with cookie

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8887
 github.client.id=e6dedd08826359276765
 github.client.secret=01da5f1ddbe49015d577e17bec2c94fb7a8683e0
 github.redirect.uri=http://localhost:8887/callback
+
+spring.datasource.url=jdbc:h2:~/testProject
+spring.datasource.username=sa
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.h2.Driver
