--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,25 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>2.5.2</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>7.11.4</version>
+                <configuration>
+                    <url>jdbc:h2:~/testProject</url>
+                    <user>sa</user>
+                    <password>123</password>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>1.4.200</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
         </plugins>
     </build>
 
