--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <version>1.4.200</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.20</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
