--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.thymeleaf.cache=false
 
 mybatis.configuration.map-underscore-to-camel-case=true
+
+baidu.AppKey=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL
+baidu.SecretKey=ezjyrQLuYiLe8xYrEcpUGLFyBiiegzRl
+baidu.redirect.uri=http://localhost:8887/baiducallback
