add plugin mybatis generator and dynamic sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.thymeleaf.cache=false
 
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.testproject.model
+mybatis.mapper-locations=classpath:mapper/*.xml
 
 baidu.AppKey=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL
 baidu.SecretKey=ezjyrQLuYiLe8xYrEcpUGLFyBiiegzRl
