--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.mybatis.dynamic-sql</groupId>
+            <artifactId>mybatis-dynamic-sql</artifactId>
+            <version>1.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -96,6 +102,14 @@
                 </dependencies>
             </plugin>
 
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.4.0</version>
+                <configuration>
+                    <includeCompileDependencies>true</includeCompileDependencies>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
