--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.username=sa
 spring.datasource.password=123
 spring.datasource.driver-class-name=org.h2.Driver
 spring.thymeleaf.cache=false
+spring.jpa.open-in-view=false
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.example.testproject.model
