--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,9 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 baidu.AppKey=SmzQr4CAxTazikFlwnfCGvmzFLSzlIXL
 baidu.SecretKey=ezjyrQLuYiLe8xYrEcpUGLFyBiiegzRl
 baidu.redirect.uri=http://localhost:8887/baiducallback
+
+spring.output.ansi.enabled=always
+logging.file.name=logs/my.log
+logging.level.root=info
+logging.level.com.example.testproject.mapper=debug
+logging.logback.rollingpolicy.clean-history-on-start=true
